[gd_scene load_steps=17 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://chomp.wav" type="AudioStream" id=2]
[ext_resource path="res://bubble.wav" type="AudioStream" id=3]
[ext_resource path="res://level.gd" type="Script" id=4]
[ext_resource path="res://orange.tscn" type="PackedScene" id=5]
[ext_resource path="res://bgbig.png" type="Texture" id=6]
[ext_resource path="res://Comic Sans MS.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://bg.png" type="Texture" id=8]
[ext_resource path="res://Sprite.gd" type="Script" id=9]
[ext_resource path="res://npc_sheet.png" type="Texture" id=10]
[ext_resource path="res://wilhelm.wav" type="AudioStream" id=11]
[ext_resource path="res://heyman.wav" type="AudioStream" id=12]

[sub_resource type="Environment" id=1]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 3
light_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_bottom = -4
extra_spacing_space = -1
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="level" type="Spatial"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="bg" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -90 )
opacity = 0.25
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
projection = 1
current = true
size = 8.0

[node name="BubbleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[node name="ChompSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0

[node name="HeySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0

[node name="ScreamSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="orange" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -1 )

[node name="orangeFish" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1 )
visible = false

[node name="Sprite3D" type="Sprite3D" parent="orangeFish"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
pixel_size = 0.0625
texture = ExtResource( 10 )
hframes = 5
vframes = 5
script = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextBox" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 4 )
margin_left = 27.0
margin_top = 407.0
margin_right = 618.0
margin_bottom = 497.0
texture = ExtResource( 8 )
expand = true

[node name="Text" type="RichTextLabel" parent="CanvasLayer/TextBox"]
margin_left = 7.0
margin_top = 8.0
margin_right = 584.0
margin_bottom = 99.0
rect_clip_content = false
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "if you so desire: 
    * use arrow keys to move.."
tab_size = 2
text = "if you so desire: 
    * use arrow keys to move.."
